# shinkleesh

backend/: .devnote  .env.example  Caddyfile  Dockerfile  alembic.ini  docker-compose-local.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  makefile  makefile.sh  pyproject.toml  run.py  test_newsfeed_api.sh  test_voting_api.sh
backend/app/: __init__.py  config.py
backend/app/adapters/repositories/: _abstract_repo.py  comment_repository.py  post_repository.py  user_repository.py  vote_repository.py
backend/app/dto/: auth.py  comment.py  common_enums.py  credit_note_item.py  customer.py  customer_order.py  customer_order_item.py  debit_note_item.py  employee.py  expense.py  financial_account.py  fixed_asset.py  inventory.py  inventory_event.py  invoice.py  invoice_item.py  material.py  payment.py  payout.py  post.py  pricing.py  process.py  purchase_order.py  purchase_order_item.py  quality_control.py  service_area.py  task.py  task_execution.py  transaction.py  trip.py  trip_stop.py  vehicle.py  vendor.py  vote.py  warehouse.py  workflow.py  workflow_execution.py
backend/app/utils/: geom_utils.py
backend/migrations/: env.py
backend/migrations/versions/: 3ed8e34bd18a_add_oauth.py  718a4acba501_add_user_model.py  a1b2c3d4e5f6_rename_is_email_verified_to_is_verified.py  b2c3d4e5f6a7_add_post_model.py  c9d8e7f6a5b4_add_oauth_fields.py  d3e4f5a6b7c8_add_comment_model.py  e4f5a6b7c8d9_add_voting.py
backend/models/: __init__.py  base.py  comment.py  common.py  mixins.py  post.py  vote.py
backend/tests/: conftest.py
expo_app/: App.tsx  (+5 more)
(+76 files in other folders)
