[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "zaid",email = "zaid.bardan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "flask (>=3.1.0,<3.2.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "google-api-python-client (>=2.164.0,<3.0.0)",
    "google-auth (>=2.38.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "email-validator (>=2.0.0,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pydantic (==2.11.3)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "geoalchemy2 (>=0.17.1,<0.18.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "pyproj (>=3.7.1,<4.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "flask-cors (>=6.0.0,<7.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "osmnx (>=2.0.6,<3.0.0)",
    "authlib (>=1.3.0,<2.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "pyjwt[crypto] (>=2.10.0,<3.0.0)",
    "h3 (>=4.1.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
